--- a/team-grinch-api/Pipfile
+++ b/team-grinch-api/Pipfile
@@ -12,6 +12,8 @@ djangorestframework = "*"
 markdown = "*"
 django-cors-headers = "*"
 psycopg2-binary = "*"
+django-on-heroku = "*"
+gunicorn = "*"
 
 [dev-packages]
 
